--- a/batches.html
+++ b/batches.html
@@ -137,7 +137,7 @@
             <a class="nav-link " aria-current="page" href="contact.html" style="color: #fff;">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link new-class-test" aria-current="page" href="test.html" style="color: #fff;">Class Test</a>
+            <a class="nav-link new-class-test" aria-current="page" href="test.html" style="color: #fff;">Test at Home</a>
           </li>
         </ul>
       </div>
