--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link new-class-test" aria-current="page" href="test.html"
-                            style="color: #fff;">Class Test</a>
+                            style="color: #fff;">Test at Home</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
     </nav>
 
     <main>
-        <h2 style="color: red;"><u>Explore the World of Physics</u></h2>
+        <h2 style="color: rgb(27, 243, 27);"><u>Explore the World of Physics</u></h2>
         <h5 style="font-style: italic;color:#333;">At Physics Centre, we provide comprehensive courses and resources to
             help you master the principles of Physics.</h5>
         <h5 style="font-style: italic;color:#333;">Whether you're a student looking for exam preparation or an
