--- a/contact.html
+++ b/contact.html
@@ -203,7 +203,7 @@ h2 {
                     </li>
                     <li class="nav-item">
                         <a class="nav-link new-class-test" aria-current="page" href="test.html"
-                            style="color: #fff;">Class Test</a>
+                            style="color: #fff;">Test at Home</a>
                     </li>
                 </ul>
             </div>
