--- a/test.html
+++ b/test.html
@@ -54,7 +54,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link new-class-test" aria-current="page" href="test.html"
-                            style="color: #fff;">Class Test</a>
+                            style="color: #fff;">Test at Home</a>
                     </li>
                 </ul>
             </div>
