--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 
     <main>
-        <h2 style="color: rgb(27, 243, 27);"><u>Explore the World of Physics</u></h2>
+        <h2 style="color: green;background: yellow;border-radius: 20px;"><u>Explore the World of Physics</u></h2>
         <h5 style="font-style: italic;color:#333;">At Physics Centre, we provide comprehensive courses and resources to
             help you master the principles of Physics.</h5>
         <h5 style="font-style: italic;color:#333;">Whether you're a student looking for exam preparation or an
@@ -132,8 +132,8 @@
                                 </p>
 
                                 <!-- Author's Footer -->
-                                <footer class="blockquote-footer pt-4 mt-4 border-top"
-                                    style="background-color: #2161b5;">
+                                <footer class="blockquote-footer mt-4 border-top"
+                                    style="background-color: #2161b5;padding-top: 0px;">
                                     Neeraj Bhardwaj
                                 </footer>
 
