--- a/resources.html
+++ b/resources.html
@@ -173,7 +173,7 @@
             <div class="resource">
                 <a href="https://drive.google.com/drive/folders/1uyaDzsbT9QowqX1YYKEmSkSu4OgyQrOU?usp=share_link">
                     <div class="resource-icon"><i class="fas fa-book"></i></div>
-                    <div class="resource-title">Class Notes</div>
+                    <div class="resource-title">Exam Materials</div>
                 </a>
             </div>
         </div>
