--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
 
     <main>
-        <h2 style="color: green;background: yellow;border-radius: 20px;"><u>Explore the World of Physics</u></h2>
+        <h2 style="color: green;background: yellow;border-radius: 20px;"><u style="text-decoration: none;">Explore the World of Physics</u></h2>
         <h5 style="font-style: italic;color:#333;">At Physics Centre, we provide comprehensive courses and resources to
             help you master the principles of Physics.</h5>
         <h5 style="font-style: italic;color:#333;">Whether you're a student looking for exam preparation or an
